<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/linearLayout1" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">

	<TextView android:textAppearance="@style/MyFont" android:text="Pocket Query Name"
		android:id="@+id/textView1" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_margin="5dp" />
		
	<EditText android:textAppearance="@style/MyFont"
		android:maxLength="50" android:text="" android:id="@+id/editText_name"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_margin="5dp" android:inputType="text" />
	
   <CheckBox
       	android:id="@+id/checkBox_autoname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_name" />
	   
		
	<TextView android:textAppearance="@style/MyFont" android:text="Radius"
		android:id="@+id/text_radius" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:gravity="bottom"
		android:layout_margin="5dp" />

	<EditText android:textAppearance="@style/MyFont"
		android:maxLength="3" android:layout_height="wrap_content" android:id="@+id/editText_radius"
		android:text="" android:layout_width="fill_parent" android:inputType="number"
		android:layout_margin="5dp" />


	<TextView android:layout_weight="1" android:text=""
		android:id="@+id/fillspace" android:layout_width="wrap_content"
		android:layout_height="0dp" />

	
	

	<RelativeLayout android:id="@+id/LinearLayout01"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/button_cancel" android:layout_height="wrap_content"
			android:text="@string/cancel" android:layout_alignParentLeft="true"
			android:layout_width="150dp" android:layout_margin="5dp" />

		<Button android:id="@+id/button_next" android:layout_height="wrap_content"
			android:text="@string/create" android:layout_alignParentRight="true"
			android:layout_width="150dp" android:layout_margin="5dp"
			android:drawableRight="@drawable/right_arrow" />
	</RelativeLayout>


</LinearLayout>
